--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,8 +8,110 @@ a {
 }
 
 /*ここから追加*/
+/*--------------------ナビゲーションメニュー-----------------------------------*/
+nav {
+  margin: 27px auto 0;
 
-/*上に戻るボタン*/
+  position: relative;
+  width: 590px;
+  height: 50px;
+  background-color: #dde2e8;
+  border-radius: 8px;
+  font-size: 0;
+}
+nav a {
+  line-height: 50px;
+  height: 100%;
+  font-size: 15px;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+}
+nav .animation {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: 0;
+  transition: all 0.5s ease 0s;
+  border-radius: 8px;
+}
+a:nth-child(1) {
+  width: 100px;
+}
+a:nth-child(2) {
+  width: 110px;
+}
+a:nth-child(3) {
+  width: 100px;
+}
+a:nth-child(4) {
+  width: 160px;
+}
+a:nth-child(5) {
+  width: 120px;
+}
+nav .start-home,
+a:nth-child(1):hover ~ .animation {
+  width: 100px;
+  left: 0;
+  background-color: #1abc9c;
+}
+nav .start-about,
+a:nth-child(2):hover ~ .animation {
+  width: 110px;
+  left: 100px;
+  background-color: #e74c3c;
+}
+nav .start-blog,
+a:nth-child(3):hover ~ .animation {
+  width: 100px;
+  left: 210px;
+  background-color: #3498db;
+}
+nav .start-portefolio,
+a:nth-child(4):hover ~ .animation {
+  width: 160px;
+  left: 310px;
+  background-color: #9b59b6;
+}
+nav .start-contact,
+a:nth-child(5):hover ~ .animation {
+  width: 120px;
+  left: 470px;
+  background-color: #e67e22;
+}
+
+body {
+  font-size: 12px;
+  font-family: sans-serif;
+  background: white;
+}
+h1 {
+  text-align: center;
+  margin: 40px 0 40px;
+  text-align: center;
+  font-size: 30px;
+  color: #ecf0f1;
+  text-shadow: 2px 2px 4px #000000;
+  font-family: "Cherry Swash", cursive;
+}
+
+p {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  color: #ecf0f1;
+  font-family: "Cherry Swash", cursive;
+  font-size: 16px;
+}
+
+/*ーーーーーーーーーーー上に戻るボタンーーーーーーーーーーーーーーー*/
 a.btn--circle {
   width: 60px;
   height: 60px;
@@ -31,7 +133,7 @@ a.btn--circle:hover i {
   line-height: 55px;
 }
 
-/*アラートボタン（各行の最後にある）*/
+/*ーーーーーーーーーアラートボタン（各行の最後にある）ーーーーーーーーーーー*/
 .toggle {
   display: inline-block;
   appearance: none; /* ① */
@@ -90,7 +192,7 @@ a.btn--circle:hover i {
   left: 32px;
 }
 
-/*---------各listの頭-----------------*/
+/*ーーーーーーーーーーーーーー各listの頭ーーーーーーーーーーーーーーーーーー*/
 .hidden_box {
   margin: 2em 0; /*前後の余白*/
   padding: 0;
@@ -130,7 +232,7 @@ a.btn--circle:hover i {
   opacity: 1;
 }
 
-/*---------各listの最後-----------------*/
+/*ーーーーーーーーーーーーー各listの最後ーーーーーーーーーーーーーーーー*/
 .hidden_box_1 {
   margin: 2em 0; /*前後の余白*/
   padding: 0;
@@ -167,7 +269,7 @@ a.btn--circle:hover i {
   opacity: 1;
 }
 
-/*------　ハンバーガーマーク　----------*/
+/*ーーーーーーーーーーーーー　ハンバーガーマーク　ーーーーーーーーーーーーーー*/
 .menu.icon {
   color: #000;
   position: absolute;
@@ -197,5 +299,3 @@ a.btn--circle:hover i {
   height: 3px;
   background-color: currentColor;
 }
-
-/*-----------------------------------*/
