--- a/public/views/index.html
+++ b/public/views/index.html
@@ -21,7 +21,22 @@
   </head>
 
   <body>
-    <!--+ボタン-->
+    <!--
+    <h1>Todo App</h1>
+    -->
+
+    <nav>
+      <a href="#" data-toggle="modal" data-target="#createtaskModal"
+        >Add task</a
+      >
+      <a href="#" id="alldelete-button">Delete all</a>
+      <a href="#" id="allchecks-button">Select all</a>
+      <a href="#" id="allunchecks-button">Deselect all</a>
+      <a href="#">menu</a>
+      <div class="animation start-home"></div>
+    </nav>
+
+    <!--+ボタンーーーーーーーーーーーーーーーーーーーーーーーー
     <a href="#"
       ><button
         type="button"
@@ -33,9 +48,62 @@
         +
       </button></a
     >
-    <!--+ボタン終了-->
+    ーーーーーーーーーーーーーーーーーーーーーーーーーーー+ボタン終了--
 
-    <!--編集ボタン
+    ーーーーー--メニューボタンーーーーーーーーーーーーーーーーーーーーーーーー
+    <td>
+      <input id="menu1" type="checkbox" />
+      <label for="menu1" class="back"></label>
+      <nav class="menu">
+        <ul>
+          <li>
+            <a href="#">
+              <span>ボタン１ </span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span>ボタン２ </span>
+            </a>
+          </li>
+        </ul>
+        <label for="menu1">閉じる</label>
+      </nav>
+      <section>
+        <label for="menu1" class="menu_btn"></label>
+      </section>
+    </td>
+    ーーーーーーーーーーーーーーーーーーーーーーメニューボタン終了--
+
+    ーーーーーー一括削除ーーーーーーーーーーーーーーーーーーーーーーーーー
+    <a href="#">
+      <span>
+        <button
+          class="btn btn-danger"
+          style="margin-top: 10px; margin-bottom: 10px"
+          id="alldelete-button"
+        >
+          一括削除
+        </button>
+      </span>
+    </a>
+    ーーーーーーーーーーーーーーーーーーーーーーーーーー一括削除終了--ーー
+
+    ーーーーーーーーーーーーーーーーーー一括選択ーーーーーーーーーーーーーーー
+    <a href="#">
+      <span>
+        <button
+          class="btn btn-dark"
+          style="margin-top: 10px; margin-bottom: 10px"
+          id="allchecks-button"
+        >
+          全て選択
+        </button>
+      </span>
+    </a>
+    ーーーーーーーーーーーーーーーーーーーーーーーーー一括取選択終了ーーーーーー
+
+    ーーーーーーーーーーーーーーーーー編集ボタンーーーーーーーーーーーー
     <a href="#"
       ><button
         type="button"
@@ -47,7 +115,7 @@
         編集
       </button></a
     >
-    編集ボタン-->
+     ーーーーーーーーーーーーーーーーーーーーーーーー編集ボタン-->
 
     <!--todo名、期限、アラートのテーブル-->
     <ul id="task-list"></ul>
@@ -121,7 +189,7 @@
     </div>
     <!-- タスクの追加を押した場合(終了) -->
 
-    <!--編集を押した場合 -->
+    <!--編集を押した場合 ーーーーーーーーーーーーーーーーーーーーーーーー
     <div
       class="modal fade"
       id="updatecategoryModal"
@@ -175,7 +243,7 @@
         </div>
       </div>
     </div>
-    <!-- 編集を押した場合(終了) -->
+    ーーーーーーーーーーーーーーーーーーーーーーーーーーー 編集を押した場合(終了) -->
 
     <!-- 更新を押した場合 -->
     <div
@@ -345,12 +413,12 @@
           }
 
           return `
-            <table class="table table-striped">
+            <table class="table table-striped" style="margin-top: 20px; margin-bottom: 10px">
               <tbody>
                 <tr>
                   <td>
+                    <input type="checkbox" class="checks" value="${item.id}"><br>
                   </td>
-                  
                   <th>
                       <div class="hidden_box">
                         <label for="label${item.id}"><div class="menu icon" ></div></label>
@@ -372,11 +440,9 @@
                         </div>
                       </div>
                     </th>
-
                     <td> <div class="col" style="margin-top: 40px; margin-bottom: 10px"><span>${item.task_name}</span></div></td>
                      <td> <div class="col" style="margin-top: 40px; margin-bottom: 10px"><span>${dead_year}年${dead_month}月${dead_d}日</span></div></td>
                     <td>
-
                       <div class="hidden_box_1">
                         <input type="checkbox" class="toggle" id="label" style="margin-top: 10px; margin-bottom: 10px"/>
                       <div class="hidden_show">
@@ -449,7 +515,40 @@
         }
       });
 
-      //
+      //全て選択
+      $("#allchecks-button").on("click", async function () {
+        var allchecks = document.getElementsByClassName("checks");
+
+        for (i = 0; i < allchecks.length; i++) {
+          allchecks[i].checked = true;
+        }
+      });
+
+      //全て選択解除
+      $("#allunchecks-button").on("click", async function () {
+        var allunchecks = document.getElementsByClassName("checks");
+
+        for (i = 0; i < allunchecks.length; i++) {
+          allunchecks[i].checked = false;
+        }
+      });
+
+      //一括削除ボタン押下時
+      $("#alldelete-button").on("click", async function () {
+        var checks = document.getElementsByClassName("checks");
+        var str = "";
+
+        for (i = 0; i < checks.length; i++) {
+          if (checks[i].checked === true) {
+            str = checks[i].value + " ";
+
+            const response = await httpDelete(
+              "//" + window.location.host + `/api/tasks/${str}`
+            );
+          }
+        }
+        window.location.reload();
+      });
     </script>
   </body>
 </html>
